generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Session {
  id        String   @id
  sid       String   @unique
  data      String
  expiresAt DateTime
}

model User {
  id             String    @id @default(uuid())
  firstName      String
  lastName       String
  email          String    @unique
  hashedPassword Bytes
  Wishlist       Wishlist?
  Cart           Cart?
}

model Product {
  id       String     @id @default(uuid())
  name     String
  price    Decimal
  wishlist Wishlist[]
  cart     Cart[]

}

model Wishlist {
  id       String    @id @default(uuid())
  user     User      @relation(fields: [userId], references: [id])
  userId   String
  products Product[]
}

model Cart {
  id       String    @id @default(uuid())
  user     User      @relation(fields: [userId], references: [id])
  userId   String
  products Product[]
}
