//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Session {
  id String [pk]
  sid String [unique, not null]
  data String [not null]
  expiresAt DateTime [not null]
}

Table User {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  hashedPassword Bytes [not null]
  Wishlist Wishlist
  Cart Cart
}

Table Product {
  id String [pk]
  name String [not null]
  price Decimal [not null]
  wishlist Wishlist [not null]
  cart Cart [not null]
}

Table Wishlist {
  id String [pk]
  user User [not null]
  userId String [not null]
  products Product [not null]
}

Table Cart {
  id String [pk]
  user User [not null]
  userId String [not null]
  products Product [not null]
}

Table ProductToWishlist {
  wishlistId String [ref: > Wishlist.id]
  productsId String [ref: > Product.id]
}

Table CartToProduct {
  cartId String [ref: > Cart.id]
  productsId String [ref: > Product.id]
}

Ref: Wishlist.userId - User.id

Ref: Cart.userId - User.id